--- a/templates/thumbnailGenerator.html
+++ b/templates/thumbnailGenerator.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Playlist Thumbnail Generator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Generate a Creative Thumbnail</h1>
+        <h1>Generate a Creative Cover</h1>
         <p>If you want to be able to upload your creation to your Spotify account, you need to log in here first.</p>
         <div id="login_status">
             <div class="login-info">
@@ -35,7 +35,7 @@
             </div>
             <br></br>
             <div class="block1-thumbnail">
-                <h2>How would you like to generate your thumbnail?</h2>
+                <h2>How would you like to generate your cover?</h2>
                 <div class="thumbnail-options">
                     <label>
                         <input type="radio" name="thumbnailData" value="track_thumbnails">
@@ -46,19 +46,19 @@
                         Craft Design from Titles & Artists
                     </label><br>
                 </div>
-                <button id="btn_generate_thumbnail">Generate a new thumbnail</button>
+                <button id="btn_generate_thumbnail">Generate a new cover</button>
                 <!-- Loading Widget -->
                 <div id="loading_widget_generation" class="loading-widget">
                     <div class="charging-bar"></div>
-                    <p>Generating Thumbnail...</p>
+                    <p>Generating Cover...</p>
                 </div>
                 <!-- Success Message -->
                 <div id="success_message_generation" class="success-message" style="display:none;">
-                    <p>Thumbnail successfully generated! (Scroll down to discover your creation)</p>
+                    <p>Cover successfully generated! (Scroll down to discover your creation)</p>
                 </div>
             </div><br>
             <div id="post_generation" class="block1-thumbnail" style="display:none;">
-                <h2>Preview of your custom playlist thumbnail</h2>
+                <h2>Preview of your custom playlist cover</h2>
                 <div id="generated_thumbnail">
                     <img id="generated_image" src="" alt="Generated Image">
                     <p id="generation_message">Love it? Save it as your playlist thumbnail in one click!</p>
@@ -76,7 +76,7 @@
             </div>
         </div>
     </div>
-    <script src="auth.js"></script>
-    <script src="thumbnailGenerator.js"></script>
+    <script src="static/auth.js"></script>
+    <script src="static/thumbnailGenerator.js"></script>
 </body>
 </html>
