--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Playlists</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
     <div class="container">
@@ -17,6 +17,6 @@
     </div>
     
     <!-- Link to the external JavaScript file -->
-    <script src="script.js"></script>
+    <script src="static/script.js"></script>
 </body>
 </html>
