change redirect url

--- a/templates/thumbnailGenerator.html
+++ b/templates/thumbnailGenerator.html
@@ -61,16 +61,16 @@
                 <h2>Preview of your custom playlist cover</h2>
                 <div id="generated_thumbnail">
                     <img id="generated_image" src="" alt="Generated Image">
-                    <p id="generation_message">Love it? Save it as your playlist thumbnail in one click!</p>
-                    <button id="btn_push_to_spotify">Save as Playlist Thumbnail</button>
+                    <p id="generation_message">Love it? Save it as your playlist cover in one click!</p>
+                    <button id="btn_push_to_spotify">Save as Playlist Cover</button>
                      <!-- Loading Widget -->
                     <div id="loading_widget_upload" class="loading-widget">
                         <div class="charging-bar"></div>
-                        <p>Uploading Thumbnail to Spotify...</p>
+                        <p>Uploading Cover to Spotify...</p>
                     </div>
                     <!-- Success Message -->
                     <div id="success_message_upload" class="success-message" style="display:none;">
-                    <p>Look at your phone - your custom thumbnail is public! (It may take up to an hour to appear here though)</p>
+                    <p>Look at your phone - your custom cover is public! (It may take up to an hour to appear here though)</p>
                 </div>
                 </div>
             </div>
