--- a/templates/thumbnailGenerator.html
+++ b/templates/thumbnailGenerator.html
@@ -46,6 +46,10 @@
                         Craft Design from Titles & Artists
                     </label><br>
                 </div>
+                <div class="mood-atmosphere">
+                    <p>Specify mood, atmosphere or style (not mandatory)</p>
+                    <input type="text" id="mood" name="mood" placeholder="e.g., chill, serene, mystical, love">
+                  </div>
                 <button id="btn_generate_thumbnail">Generate a new cover</button>
                 <!-- Loading Widget -->
                 <div id="loading_widget_generation" class="loading-widget">
