--- a/static/styles.css
+++ b/static/styles.css
@@ -185,7 +185,7 @@ button:hover {
 }
 
 .mood-atmosphere {
-    margin-bottom: 40px;
+    margin-bottom: 25px;
     margin-top: 40px;
     font-weight: bold;
 }
@@ -204,6 +204,10 @@ button:hover {
 #mood:focus {
     border-color: #007BFF; /* Blue border on focus */
     outline: none; /* Remove default focus outline */
+}
+
+#btn_generate_thumbnail {
+    margin-bottom: 10px;
 }
 
 #container-thumbnail {
