add example output images

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
         <div class="container">
             <h1>Spotify Playlist Cover Creator</h1>
             <p>Create beautiful, custom covers for your favorite Spotify playlists by blending track cover images.</p>
-            <button class="create-btn" onclick="window.location.href='/playlist-explorer';">Create Your Cover</button>
+            <button class="create-btn"  onclick="window.location.href='/playlist-explorer';">Create Your Cover</button>
         </div>
     </header>
 
@@ -22,19 +22,19 @@
             <img src="https://i.scdn.co/image/ab67616d0000b273d64b294cc4a288c7a84c04bb" alt="Track 2 Image" class="track-img">
             <img src="https://i.scdn.co/image/ab67616d0000b273460a6b31a32dd55f2149dfcf" alt="Track 3 Image" class="track-img">
             <span class="arrow">⟶</span>
-            <img src="https://ffabafc68bfb345c2024c3b0191960abe7a1ce1ed6896347bf71d79-apidata.googleusercontent.com/download/storage/v1/b/coversimages/o/alex-scooter-1.png?jk=AdvOr8v1lDcs1XwpRZMfWDWheoz5Th_QgIRNvLlHv4PoJlCSxxbVzyxeSWF_bLvvJ-ZEDR77EI63NdA7EV_2rIXyY181MBtg9qyVQtiT6O5TmCBGGGDCn2nvWJM0bL2Xxpf3nPLjjNbFVhC5IFB6UJTimYT3b8Mi7P6o83cnvTxD6mJohiUNNQgfVU6ic3SbHyEMeD1xGYgg6m8AKXs2MKOjLbwF99FT1jyYyQNKrh4WRp2NUuC0qC2SrtT7mL5yGS7SRYpv6QWRhvY3DUef6bDwGcgpMV6rpstzl9rrAvufUOc6sZlzTuoijw45ALfyIqyV3joGGrZoYPguk0muDidfEtLDN03HkoKmOtrT2QxM-0dhJZgdWdI-ilxPfwpWZkz3bP7SeYmu4yJMMn9LHm2Nf4-99-PADK9V3acfPNmxNH1w3XQKsuIjRIvaEpB9SRVhN6RMyV026NZwOTEHEgxmn4hqDm8nCz5ohlaSNwzpWrkHeKSxGyxyWWwg7W3urgWHTZIQ7ueSfW0-lCh2ikSZQWncVTV8vLjxEtsD7oms-kDvUaRxiRVwgbl_5wE-35qvVDf_60vahxLLxRHVKPKD_O4TccgtSLc4iJx2NaGQCsVYW4Tqz42eQRBzWgmacI-XyOJwxXqcUGvinRRxSqhB4hAd-iSr-AxxqaDS1Y1H1RRk0nzAfLAUQUkmq3sD4Uhvvxf2XQ8R_xpnaGjd3_d7My02VWwmVHdGgAIh8soOVIMy0FIt9aOVEq6mktrKpvQnqtD5Fe1ZquH-7Nrt5dvdptIkcH4baTnk8T3SSpH3GhgBCpGqF3lbQ_Kq4nJKsl2Ui68Ht_GBYSG3mdTDfRJnxiQLwJ8w_8erC5j_TfIW8AnO5Cs7fmQRYb5uVWURfimsaF8CgUbsC-ntHr4ZYRYHPkrJwzkHm0vj7NadruX5jx7ZaJPKLzaxlzi-7oGm7kIcpYJNhb_n_C-EcXwlCtYouTU-8FQrUPPgRWleUF3X_scCfDewmNWKUkwuaP5dQPFbXbni9B49_8xQcL8q3IkR01KZtS3ILncHuueWKX_Nh4-r2GKZHmBtAt2TYZVdD4sIEO4yZpu7HWmX7OUXgn8rMBgnj6-rWfSAjiN6egA-aWSm_9eTwUWuysg&isca=1" alt="Generated Cover" class="output-img">
+            <img src="static/images/alex-scooter-1.png" alt="Generated Cover" class="output-img">
         </div>
         <div class="cover-example">
             <img src="https://i.scdn.co/image/ab67616d0000b273b6515dd60db533a38b4ddac5" alt="Track 3 Image" class="track-img">
             <img src="https://i.scdn.co/image/ab67616d0000b27314b67fd4cfcdaba9fc304f05" alt="Track 4 Image" class="track-img">
             <span class="arrow">⟶</span>
-            <img src="https://ff082c0b223e802445926de8bf655a788e1834f626815071198adfb-apidata.googleusercontent.com/download/storage/v1/b/coversimages/o/disco-worldholdon3.png?jk=AdvOr8uxCTTic4oR2CUpWq6nLVguZb51zEHUTx12r_wyttvkvwTosMHlvsX9pwCwacgwTVOHa8KPX1LdrAFoxgKWMPOeM6r8snOmPkocWRzYndD7N37zNyI810prFu5fi3civYgYtq5I1DPngqP_MdIswgjgjo08YZIwtZMspveNsqs7x2CnMuS801STrXqYvgtrNsOTGJMvXtiqq_LkEoITwEUxOyi4ENCvar3NG4GtuxKgQ43ZkeQiZtQBvUNAKau2OUJpMpFYnHV3IDcC8520iZkntN2bVL1H-MpCc40juwH2o_07aDHyJmLF_SEzX8wPdkHp1SxFULwVTiPjbZ2F-Imu3CMpul0FBuiq3IBhNO5LRx-25QeKP7wjVca8VxYonAYopkdG0RwY4VGfJNPFYPuJILmJmwYcj48GG15cvbnHHh4PMNAjk-JXszszqj0zq0vax94MYftczbRaZpwtHh1mSJ_0Y4DXMfuGiHgCiiGQ4PbZaVcBPIDdY8caB5u-SHOZfQzSUga6fF8vGsdQJ7k4Hwk0kg8GyZsX7nbU6UEtlvnb4d-UDygpFdq9SNP3SINJTSgzWR1hLKSzjhm4PUSwbvn8MdHyr5m-2cPOIh5puLaiCKhlX_quKAAjk2-goyBoQ91P3KNdwBWRBNyxqzjQ5IrcA19QCJUynmiA7ryoJ9hesVr6_A7dZ6zrjd-7vMBcYAbW5wrMK_aW5KgB1RHTeUiJgxJnVd3le0L9XokLABS5gWI9tJUEU2sCsV4n45AloMkW3iUvlS4sTSntiAVc-nM2o0a9yzwv6BwEYGmME0v4vrQXEFAsRxLOGpGoy4TaSQfo3CO4Y0JJDvEBhjY0bN3dYfRuAJYc2ixSWrOBZwlkCb3LN4XO_nGNZ1-bq5FOJnDCCVP4od4R0bJWiVom4Pdhv6D3n5vTSMc8sviChLH60_eeDV4qEPAUVW5-i316LdBzT4gK2jJ7MXlgEMne3Fzc1HIU1wEWAUyjjF8mVJcGg2V8XUiSLPNdpGan7NydeYodVFU-fkucGeGO6gOOVyaVeVUaMczuRJTr-vQvuziKEFvOgnEg2m4vgbn-OItBONjRi37jYSj9eUmhjPdXi4NnZAzk9eozH4K7QM92VvfdPkQaC9Qfgmbs&isca=1" alt="Generated Cover" class="output-img">
+            <img src="static/images/disco-worldholdon3.png" alt="Generated Cover" class="output-img">
         </div>
         <div class="cover-example">
             <img src="https://i.scdn.co/image/ab67616d0000b2734fae1e875cb0457ce1b1caad" alt="Track 5 Image" class="track-img">
             <img src="https://i.scdn.co/image/ab67616d0000b273adc391e06a1ecdc2cb4d193f" alt="Track 6 Image" class="track-img">
             <span class="arrow">⟶</span>
-            <img src="https://storage.cloud.google.com/coversimages/lesson1%2Bmad-about-you.png" alt="Generated Cover" class="output-img">
+            <img src="static/images/lesson1+mad-about-you.png" alt="Generated Cover" class="output-img">
         </div>
     </section>
 
