--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
         <div class="container">
             <h1>Spotify Playlist Cover Creator</h1>
             <p>Create beautiful, custom covers for your favorite Spotify playlists by blending track cover images.</p>
-            <button class="create-btn"  onclick="window.location.href='/playlist-explorer';">Create Your Cover</button>
+            <button class="create-btn"  onclick="window.location.href='/playlist-explorer';">Create your cover</button>
         </div>
     </header>
 
