--- a/templates/thumbnailGenerator.html
+++ b/templates/thumbnailGenerator.html
@@ -25,7 +25,7 @@
                 <div class="block1-1-thumbnail">
                     <div>
                         <div class="playlist-details">
-                            <h2 id="playlist_name">Playlist Name</h2>
+                            <h2 id="playlist_name">Playlist name</h2>
                             <img id="playlist_image" src="" alt="Playlist Image">    
                             <p id="track_count">0 track(s)</p>
                         </div>
@@ -39,11 +39,11 @@
                 <div class="thumbnail-options">
                     <label>
                         <input type="radio" name="thumbnailData" value="track_thumbnails">
-                        Fusion of Track Images
+                        Fusion of track images
                     </label><br>
                     <label>
                         <input type="radio" name="thumbnailData" value="titles_artists">
-                        Craft Design from Titles & Artists
+                        Craft design from titles & artists
                     </label><br>
                 </div>
                 <div class="mood-atmosphere">
@@ -66,11 +66,11 @@
                 <div id="generated_thumbnail">
                     <img id="generated_image" src="" alt="Generated Image">
                     <p id="generation_message">Love it? Save it as your playlist cover in one click!</p>
-                    <button id="btn_push_to_spotify">Save as Playlist Cover</button>
+                    <button id="btn_push_to_spotify">Save as playlist cover</button>
                      <!-- Loading Widget -->
                     <div id="loading_widget_upload" class="loading-widget">
                         <div class="charging-bar"></div>
-                        <p>Uploading Cover to Spotify...</p>
+                        <p>Uploading cover to Spotify...</p>
                     </div>
                     <!-- Success Message -->
                     <div id="success_message_upload" class="success-message" style="display:none;">
