--- a/templates/playlistExplorer.html
+++ b/templates/playlistExplorer.html
@@ -10,8 +10,8 @@
     <div class="container">
         <h1>Spotify Playlists</h1>
         <div id="input-container">
-            <input type="text" id="user_id_input" placeholder="Enter Spotify User ID">
-            <button onclick="getPlaylists()">Search Playlists</button>
+            <input type="text" id="user_id_input" placeholder="Enter Spotify user ID">
+            <button onclick="getPlaylists()">Search playlists</button>
         </div>
         <div id="playlists_list"></div>
     </div>
