fix login error issue and create config.js

--- a/templates/thumbnailGenerator.html
+++ b/templates/thumbnailGenerator.html
@@ -91,7 +91,8 @@
             </div>
         </div>
     </div>
-    <script src="static/auth.js"></script>
+    <script type="module" src="static/config.js"></script>
+    <script type="module" src="static/auth.js"></script>
     <script src="static/thumbnailGenerator.js"></script>
 </body>
 </html>
