--- a/templates/playlistExplorer.html
+++ b/templates/playlistExplorer.html
@@ -5,18 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Playlists</title>
     <link rel="stylesheet" href="static/styles.css">
+    <script>
+        // Set generated_image to null when the page is shown
+        window.addEventListener('pageshow', function(event) {
+            // Check if the page is loaded from the cache
+            if (event.persisted || (window.performance && window.performance.navigation.type === 2)) {
+                sessionStorage.setItem('generated_image', null);
+            }
+        });
+    </script>
 </head>
 <body>
     <div class="container">
         <h1>Spotify Playlists</h1>
         <div id="input-container">
-            <input type="text" id="user_id_input" placeholder="Enter Spotify user ID">
+            <div class="input-wrapper">
+                <input type="text" id="user_id_input" placeholder="Enter Spotify User ID">
+                <span class="helper-icon" id="helper-icon">?</span>
+                <div class="helper-popup" id="helper-popup">
+                    <img src="static/images/helper-userid.png" alt="Instructions for finding Spotify User ID" style="max-width: 100%; height: auto;">
+                </div>
+                
+            </div>
             <button onclick="getPlaylists()">Search playlists</button>
         </div>
         <div id="playlists_list"></div>
     </div>
     
-    <!-- Link to the external JavaScript file -->
     <script src="static/script.js"></script>
 </body>
 </html>
