--- a/templates/thumbnailGenerator.html
+++ b/templates/thumbnailGenerator.html
@@ -80,7 +80,7 @@
                     <button id="btn_push_to_spotify">Save as playlist cover</button>
                      <!-- Loading Widget -->
                     <div id="loading_widget_upload" class="loading-widget">
-                        <div class="charging-bar"></div>
+                        <div class="charging-bar" id="charging-bar-upload"></div>
                         <p>Uploading cover to Spotify...</p>
                     </div>
                     <!-- Success Message -->
