--- a/templates/playlistExplorer.html
+++ b/templates/playlistExplorer.html
@@ -16,7 +16,7 @@
     </script>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="container-playlist-explorer">
         <h1>Spotify Playlists</h1>
         <div id="input-container">
             <div class="input-wrapper">
