--- a/templates/thumbnailGenerator.html
+++ b/templates/thumbnailGenerator.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
-    <div class="container-thumbnail-page">
+    <div class="container">
         <h1>Generate a Creative Cover</h1>
         <p>If you want to be able to upload your creation to your Spotify account, you need to log in here first.</p>
         <div id="login_status">
